# fitonduty-dashboard

./: .gitignore  Dockerfile  app.py  callbacks.py  index.py  main.py  pyproject.toml  wsgi.py
assets/: login.js  sidebar-transitions.js  sidebar.js  styles.css
assets/css/: base-typography.css  base-variables.css  charts.css  components-buttons.css  components-cards.css  components-forms.css  index.css  layout-admin-sidebar.css  layout-footer.css  layout-navbar.css  layout-participant.css  mobile.css  ranking-race.css  ranking.css  styles.css  visualization-charts.css  visualization-ranking.css
assets/js/: admin-charts.js  index.js  responsive-charts.js  sidebar-transitions.js
callbacks/: admin_callbacks.py  participant_callbacks.py  supervisor_callbacks.py
components/: __init__.py  daily_snapshot.py  day_selector.py  footer.py  participant_metrics.py
components/admin/: anomaly_charts.py  date_selector.py  group_comparison.py  group_data_summary.py  group_summary.py  participant_detail.py  sidebar.py
components/participant/: date_selector.py  detailed_charts.py  health_metrics.py  navbar.py  participant_ranking.py  questionnaire_ranking.py  summaries.py  (+1 more)
data/: participant1.csv  participant2.csv
layouts/: __init__.py  admin_layout.py  error_layouts.py  footer.py  login_layout.py  participant_layout.py  supervisor_layout.py
scripts/: env.sh.template  init_db.py  reset_db.sh.template  run.sh  setup_database.sh.template  setup_db.sh  update_db_functions.py
utils/: __init__.py  data_utils.py  database.py  formatting.py  logging_config.py  visualization.py
(+20 files in other folders)
