[project]
name = "fitonduty-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.2",
    "dash-bootstrap-components>=2.0.0",
    "flask-login>=0.6.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
